[package]
name = "pars"
license = "MIT"
version = "0.1.0"
authors = ["Shashi Kant <shashitnak42@proton.me"]
edition = "2021"
description = "Parsing library using concepts of Parser combinators"
repository = "https://github.com/shashitnak/pars"
documentation = "https://docs.rs/pars"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
