[package]
name = "pa-rs"
license = "MIT"
version = "0.1.4"
authors = ["Shashi Kant <shashitnak42@proton.me"]
edition = "2021"
description = "Parsing library using concepts of Parser combinators"
repository = "https://github.com/shashitnak/pa-rs"
documentation = "https://docs.rs/pa-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
